--- a/apps/ui/public/index.html
+++ b/apps/ui/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <style type = "text/css">
+      @page { size:210mm 297mm; margin: 2cm;}
+    </style>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
