--- a/apps/ui/public/index.html
+++ b/apps/ui/public/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <style type = "text/css">
-      @page { size:210mm 297mm; margin: 2cm;}
+    <style media="print" type = "text/css">
+      @page { 
+        size: 210mm 297mm;
+        margin: 2cm;
+      }
+      body { 
+        width: 100%;
+        margin: auto;
+      }
     </style>
   </head>
   <body>
