--- a/apps/ui/public/index.html
+++ b/apps/ui/public/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-    <style media="print" type = "text/css">
-      @page { 
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <style type="text/css">
+      body,
+      #root {
+        width: 100%;
+        min-height: 100%;
+      }
+    </style>
+    <style media="print" type="text/css">
+      @page {
         size: 210mm 297mm;
         margin: 2cm;
       }
-      body { 
+      body {
         width: 100%;
         margin: auto;
       }
